Add SQLite initialization to NFS installation

--- a/nfs.yml
+++ b/nfs.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install and configure NFS server
+- name: Install and configure NFS server, along with SQLite3 DB
   hosts: felwithe
   roles:
     - install-nfs
