Fix relative path to roles

--- a/playbooks/kubernetes.yml
+++ b/playbooks/kubernetes.yml
@@ -3,22 +3,22 @@
   hosts: all
   become: yes
   roles:
-    - { role: change-password, secret_name: mehlj_lab_creds }
+    - { role: ../roles/change-password, secret_name: mehlj_lab_creds }
 
 - name: Configure /etc/hosts with future k8s nodes
   hosts: all
   become: yes
   roles:
-    - configure-host-file
+    - ../roles/configure-host-file
 
 - name: Conform to kubespray server requirements
   hosts: all
   become: yes
   roles:
-    - kubespray-requirements
+    - ../roles/kubespray-requirements
 
 - name: Install helm for later use
   hosts: all
   become: yes
   roles:
-    - install-helm
+    - ../roles/install-helm
