--- a/roles/change-password/tasks/main.yml
+++ b/roles/change-password/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
 # tasks file for change-password
+- block:
+
+  - name: Install AWS plugin collection via ansible-galaxy
+    shell: ansible-galaxy collection install amazon.aws
+
+  when: install_plugin is defined
+
 
 - name: Change root and mehlj password
-  block:
-    - name: Install AWS plugin collection via ansible-galaxy
-      shell: ansible-galaxy collection install amazon.aws
-  when: install_plugin is defined
   vars:
     credentials: "{{ lookup('amazon.aws.aws_secret', secret_name) }}"
   user:
