Modify pip installation

--- a/roles/change-password/tasks/main.yml
+++ b/roles/change-password/tasks/main.yml
@@ -5,11 +5,7 @@
   - name: Install AWS plugin collection via ansible-galaxy
     command: ansible-galaxy collection install amazon.aws
 
-  - name: Install boto3 and botocore for root
-    pip:
-      name: [ "boto3", "botocore" ]
-
-  - name: Install boto3 and botocore for non-privileged users
+  - name: Install boto3 and botocore 
     pip:
       name: [ "boto3", "botocore" ]
       extra_args: "--user"
