--- a/roles/change-password/tasks/main.yml
+++ b/roles/change-password/tasks/main.yml
@@ -14,6 +14,8 @@
 
 
 - name: Change root and mehlj password
+  environment:
+    AWS_DEFAULT_REGION: us-east-1
   vars:
     credentials: "{{ lookup('amazon.aws.aws_secret', secret_name) }}"
   user:
