--- a/roles/change-password/tasks/main.yml
+++ b/roles/change-password/tasks/main.yml
@@ -12,18 +12,23 @@
  
 - name: Find all python3 versions
   shell: find / -name python3
+  ignore_errors: yes
   
 - name: Find all python versions
   shell: find / -name python
+  ignore_errors: yes
   
 - name: Find default in-use python
   shell: which python
+  ignore_errors: yes
   
 - name: find default in-use python3
   shell: which python3
+  ignore_errors: yes
   
 - name: Find location of boto3
   shell: find / -name boto3
+  ignore_errors: yes
 
 - name: Change root and mehlj password
   vars:
