--- a/playbooks/traefik.yml
+++ b/playbooks/traefik.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy traefik as NodePort and two example applications
-  hosts: k8snode0
+  hosts: all
   become: yes
   roles:
     - ../roles/deploy-traefik
